--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -4,11 +4,26 @@
 
 
   <% @lists.each do |list|%>
-  <ul>
-  <li class="list-group-item"><%= link_to list.name, list_path(list)%></li>
-  </ul>
+  <div class="container" id="listcontainer">
+    <ul>
+      <li class="list-group-item"><div class="container" id="listcard" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path '7xfs9f6pvaejotru0i3546ayee10', crop: :scale %>')"><%= link_to list.name, list_path(list)%></div></li>
+    </ul>
+  </div>
   <%end%>
 
 
 
 </div>
+
+<%#
+<%=cl_image_tag("rnunhclgthyokpll3hfh",
+      width: 800, height: 300, crop: :fill) '%'>
+
+<%= cl_image_tag("dpuvv45njjzilyzd6dve",
+width: 150, height: 150, crop: :thumb, gravity: :face) %>
+
+<%# <%= cl_image_tag("dpuvv45njjzilyzd6dve", transformation: [
+  {gravity: "face", height: 200, width: 200, crop: "thumb"},
+  {radius: "max"},
+  {fetch_format: "auto"}
+  ])%>
