--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,3 +10,10 @@
 .navbar-lewagon .navbar-brand img {
   width: 40px;
 }
+
+#icon {
+  color: blue;
+  text-align: center;
+  align-content: center;
+  font-size: 30px;
+}
