--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -1,7 +1,8 @@
 <div class="container d-flex navbar-lewagon navbar-collapse">
-    <p> Logo </p>
-    <nav class="navbar bg-light">
+    <i id="icon" class="fa-solid fa-film"></i>
+    <nav class="navbar">
     <form class="container-fluid justify-content-start">
+      <button class="btn btn-outline-success me-2" type="button" href="/root"><%= link_to "Home", lists_path %></button>
       <button class="btn btn-outline-success me-2" type="button" href="/root"><%= link_to "Add List", new_list_path %></button>
     </form>
     </nav>
