--- a/app/assets/stylesheets/components/_moviecard.scss
+++ b/app/assets/stylesheets/components/_moviecard.scss
@@ -1,3 +1,37 @@
-#moviecard img{
-  width: 200px;
+
+#card {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 16px;
+}
+
+#image img{
+  width: 100%;
+  margin: auto;
+  display: block;
+}
+
+#del {
+  text-align: center;
+  align-content: center;
+  background-color: orange;
+  border-radius: 16px;
+  padding: 5px 10px;
+}
+
+#head {
+  align-content: space-between;
+}
+
+#detail{
+  height: 220px;
+  padding-top: 20px;
+  margin-bottom: 20px;
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
