--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,27 +1,29 @@
 
-<div class="container d-flex">
+<div class="container d-felx" id="head">
 
-<h1>List: <%=@list.name%></h1>
+<h1>List: <%=@list.name%> </h1>
 
-<%= link_to "Add new Bookmark", new_list_bookmark_path(@list) %>
+<h4 id="del"><%= link_to "Add new Bookmark", new_list_bookmark_path(@list) %></h4>
 </div>
 
 <div class="container">
-  <div class="container d-flex">
+  <div id="card" class="container grid">
 
       <% @bookmarks.each do |bookmark|%>
       <ul>
         <li class="list-group-item" id="moviecard">
-
+        <div class="container" id="image">
           <%= image_tag(bookmark.movie.poster_url) %>
-          <%= bookmark.movie.title %>
-          <%= bookmark.movie.rating %>
-          <%= bookmark.movie.overview %>
-          <br>
-          <br>
-
-          <%= link_to "❌", list_bookmark_path(@list,bookmark), data: {turbo_method: :delete, turbo_confirm:"Are you really sure you want to delete this Bookmark?"} %>
-          <%= bookmark.comment%>
+          <div class="container" id="detail">
+            <h5><%= bookmark.movie.title %></h5>
+            <h6><%= bookmark.movie.rating %>  ⭐️</h6>
+            <%= bookmark.movie.overview %>
+          </div>
+          <div class="container">
+            <%= link_to "❌", list_bookmark_path(@list,bookmark), data: {turbo_method: :delete, turbo_confirm:"Are you really sure you want to delete this Bookmark?"} %>
+            <%= bookmark.comment%>
+          </div>
+          </div>
         </li>
       </ul>
       <%end%>
